# ChangeLog for dev-java/dom4j
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/dom4j/ChangeLog,v 1.42 2008/01/05 22:06:14 betelgeuse Exp $

  05 Jan 2008; Petteri Räty <betelgeuse@gentoo.org> metadata.xml,
  dom4j-1.6.1-r2.ebuild:
  Shorten DESCRIPTION.

  09 May 2007; Raúl Porcel <armin76@gentoo.org> dom4j-1.6.1-r2.ebuild:
  Add ~ia64 wrt #160813

  10 Jan 2007; Vlastimil Babka <caster@gentoo.org> -dom4j-1.4-r1.ebuild,
  -dom4j-1.5.ebuild, -dom4j-1.6.1.ebuild:
  Gen-1 punt.

  10 Jan 2007; Steve Dibb <beandog@gentoo.org> dom4j-1.6.1-r2.ebuild:
  amd64 stable, bug 159099

  03 Jan 2007; Tom Gall <tgall@gentoo.org> dom4j-1.6.1-r2.ebuild:
  stable on ppc64, bug #159099

  01 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  -files/dom4j-1.6.1-java5.patch, dom4j-1.4-r1.ebuild, dom4j-1.5.ebuild,
  dom4j-1.6.1.ebuild, dom4j-1.6.1-r2.ebuild:
  Move the large java15 patch to mirrors. Correct licenses.

  30 Dec 2006; Andrej Kacian <ticho@gentoo.org> dom4j-1.6.1-r2.ebuild:
  Stable on x86, bug #159099.

  29 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  dom4j-1.6.1-r2.ebuild:
  Stable on ppc wrt bug #159099.

  09 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> dom4j-1.6.1-r2.ebuild:
  Add ~x86-fbsd keyword.

  30 Nov 2006; Vlastimil Babka <caster@gentoo.org> dom4j-1.6.1.ebuild,
  -dom4j-1.6.1-r1.ebuild, dom4j-1.6.1-r2.ebuild:
  Update xerces dep for upcoming 2.6 slotmove.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> dom4j-1.4-r1.ebuild,
  dom4j-1.5.ebuild:
  Dropping sparc keywords, see #96229

*dom4j-1.6.1-r2 (14 Sep 2006)

  14 Sep 2006; Joshua Nichols <nichoj@gentoo.org>
  +files/dom4j-1.6.1-java5.patch, +dom4j-1.6.1-r2.ebuild:
  Applied patch for compiling with Java 1.5 provided by Martin Jansa
  <Martin.Jansa@mk.cvut.cz> in bug #137970. Added ~ppc64 keyword.

*dom4j-1.6.1-r1 (27 Jul 2006)

  27 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org> +dom4j-1.6.1-r1.ebuild: