@@ -1,5 +1,5 @@
 DIST dom4j-1.6.1-java5.patch.bz2 2900 RMD160 cb153194e3b5d13626486d8f376b76f0925448c8 SHA1 468330fe079e8c1c13e935da18a49b10163dcb86 SHA256 5e7361eac5332c3380420bd88c2d3a2d4dde30984486c6d4f7e4621940abb42d
 DIST dom4j-1.6.1.tar.gz 9687211 RMD160 d990d712a6b58c799366c526b32eb6c84a81e29c SHA1 8a2ab8af1dd039c449032ad50f3dd050647d7ce8 SHA256 01b4abf86bce337a2a900bf121b3107320ba63b4c0f352e1922fbec6e0736c6f
-EBUILD dom4j-1.6.1-r2.ebuild 2121 RMD160 eb729a1faeb8ac9971f05504b1f40b69b170e7bc SHA1 d651f91520f8946080dada2e3c5af6cd82227856 SHA256 484e66eb1dec3c8128c63a348d8e9453fcb9819f45b10d9a4c91a59ae252e0eb
-MISC ChangeLog 4893 RMD160 4b2647fd31c9ba38df3d6769c71f370a4625c382 SHA1 9e73f2d45d96f6752547e7958689b6a8d1ed702c SHA256 d05f33a826898f145fbb4d6bf8798bab0a7f251453715cea0aea6b3e682d15f8
+EBUILD dom4j-1.6.1-r2.ebuild 2155 RMD160 b3c677994d5e3be5eaf4ac2e2e1e2773b5ff30e7 SHA1 d99e785b070485ae95821b55f85c1d1311aa552c SHA256 2badb2e866692f8ca0051a8ce5527f8fadec95b208736f213ea1bb5cfeea7364
+MISC ChangeLog 5052 RMD160 599db9d69beedd532d396f5162aea82066ae3ec8 SHA1 3b4d0abe66b1d7598d5ed65a30e21a33c91b9a7e SHA256 13070ad5e8740cc7443fc9c51c5f56b84d5d79de348b412eb481eb14a283965b
 MISC metadata.xml 376 RMD160 ab4f5ef01e92c40a24cc41a50e56948c5454ed3e SHA1 96b1c474f7dc9fe9915f6d58dd4ec1be2badb82f SHA256 1b7f4f99476e5a8b0f24104d0bd3d6c717ee3a32011851d32a8d3f5674e5d2c4
